# mur

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  PLAN.md  README.md  build.sh  mur
.github/workflows/: ci.yml  release.yml
mur-common/: Cargo.toml
mur-common/src/: config.rs  event.rs  knowledge.rs  lib.rs  llm.rs  pattern.rs  workflow.rs
mur-core/: Cargo.toml  build.rs
mur-core/src/: auth.rs  community.rs  dashboard.rs  extract.rs  gep.rs  interactive.rs  lib.rs  llm.rs  main.rs  mur_in_skill.md  mur_out_skill.md  mur_skill.md  mur_workflow_skill.md  server.rs  team.rs
mur-core/src/capture/: emergence.rs  feedback.rs  import.rs  mod.rs  noise_filter.rs  starter.rs  style.rs
mur-core/src/cmd/: community_cmd.rs  context.rs  evolve_cmd.rs  init.rs  inject_cmd.rs  learn.rs  misc.rs  mod.rs  pattern.rs  reindex.rs  server_cmd.rs  session.rs  sync_cmd.rs  workflow.rs
mur-core/src/context_api/: mod.rs
mur-core/src/evolve/: adjuster.rs  commander_bridge.rs  compose.rs  consolidate.rs  cooccurrence.rs  decay.rs  decompose.rs  feedback.rs  lifecycle.rs  linker.rs  maturity.rs  mod.rs
mur-core/src/inject/: hook.rs  mod.rs  sync.rs
mur-core/src/migrate/: mod.rs
mur-core/src/retrieve/: gate.rs  mod.rs  scoring.rs
mur-core/src/session/: mod.rs
mur-core/src/store/: config.rs  embedding.rs  exchange.rs  lancedb.rs  mod.rs  workflow_yaml.rs  yaml.rs
mur-core/web-fallback/: index.html
plans/: 010-dashboard-architecture.md  MEMORY-SYSTEM-PLAN.md  PLAN-009-editor-ux.md
