[package]
name = "mur-core"
description = "Continuous learning for AI assistants — CLI and library"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "mur_core"
path = "src/lib.rs"

[[bin]]
name = "mur"
path = "src/main.rs"

[dependencies]
mur-common = { path = "../mur-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs = "6"
