[package]
name = "mur-core"
description = "Continuous learning for AI assistants — CLI and library"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "mur_core"
path = "src/lib.rs"

[[bin]]
name = "mur"
path = "src/main.rs"

[dependencies]
mur-common = { path = "../mur-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs = "6"
regex = "1"
lancedb = "0.26"
arrow-array = "57"
arrow-schema = "57"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
